<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_border_feedback"
    android:layout_margin="20dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">

<!--    <com.wang.avi.AVLoadingIndicatorView-->
<!--        android:id="@+id/progressBar"-->
<!--        style="@style/AVLoadingIndicatorView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:visibility="gone"-->
<!--        app:indicatorColor="@color/purple_200"-->
<!--        app:indicatorName="BallScaleMultipleIndicator" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/lbl_please_rate_us"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/simpleRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="0"
            android:isIndicator="false"
            android:layout_gravity="center"
            android:progressTint="@color/blue_color"
            android:secondaryProgressTint="@color/blue_color"
            android:numStars="5"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:stepSize="1"/>

        <EditText
            android:inputType="text"
            android:id="@+id/editFeedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/lbl_please_enter_feedback"
            android:paddingStart="5dp"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSkip"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_buttons_no"
                android:gravity="center"
                android:hint="@string/skip"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_buttons_select"
                android:gravity="center"
                android:hint="@string/submit"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />



        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
