<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rvConversations"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="1dp"
            android:background="@color/bg_agent_message">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/rlUserProfile"
                        android:layout_gravity="center"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/letter_background">

                        <TextView
                            android:id="@+id/txtUserFirstLater"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/white"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>
                <RelativeLayout
                    android:layout_weight="1.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:textSize="10dp"
                            android:textColor="@color/black"
                            />

                        <TextView
                            android:id="@+id/txtUserEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:textSize="10dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMainNew"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layoutNew"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                >
                <TextView
                    android:layout_weight="1.6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:text="@string/lbl_new"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    />

                <LinearLayout
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:visibility="gone"
                        android:id="@+id/layoutNewCountMain"
                        android:layout_gravity="center"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/count_background">

                        <TextView
                            android:id="@+id/txtNewCount"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="10dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ff4d4d4d"/>

        <LinearLayout
            android:id="@+id/layoutMainAssignToMe"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layoutAssignToMe"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                >
                <TextView
                    android:layout_weight="1.6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:text="@string/lbl_assigned_to_me"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    />

                <LinearLayout
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:visibility="gone"
                        android:id="@+id/layoutAssignToMeCountMain"
                        android:layout_gravity="center"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/count_background">

                        <TextView
                            android:id="@+id/txtAssignToMeCount"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="10dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ff4d4d4d"/>

        <LinearLayout
            android:id="@+id/layoutMainAllAssign"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layoutAllAssign"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                >
                <TextView
                    android:layout_weight="1.6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:text="@string/lbl_all_assign"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    />

                <LinearLayout
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:visibility="gone"
                        android:id="@+id/layoutAllAssignCountMain"
                        android:layout_gravity="center"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/count_background">

                        <TextView
                            android:id="@+id/txtAllAssign"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="10dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ff4d4d4d"/>

        <LinearLayout
            android:id="@+id/layoutMainResolved"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layoutResolved"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                >
                <TextView
                    android:layout_weight="1.6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:text="@string/lbl_resolved"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    />

                <LinearLayout
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:visibility="gone"
                        android:id="@+id/layoutResolvedCountMain"
                        android:layout_gravity="center"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/count_background">

                        <TextView
                            android:id="@+id/txtResolvedCount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="2dp"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="10dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ff4d4d4d"/>


        <LinearLayout
            android:id="@+id/layoutLogout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtLogout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="start|center"
                android:maxLines="1"
                android:text="Logout"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="12dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#ff4d4d4d"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>